syntax = "proto3";
import "common.proto";

package pb;
option go_package ="./;pb";

service LogSlave {
    rpc Push (SlavePushMsg) returns (Empty) {}//前端推送日志
}

message SlavePushMsg{
    string  title       = 1;
    string  content     = 2;
}
